--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 [dependencies]
 wson_rs = "0.2.4"
 colorex = "0.1.1"
+wavec = { git = "https://github.com/LunaStev/Wave", branch = "develop" }
