--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "vex"
-version = "0.0.1-pre-alpha"
+version = "0.0.1"
 edition = "2021"
 
 [dependencies]
-wson_rs = "0.2.4"
+wson_rs = "0.2.5"
 colorex = "0.1.1"
-wavec = { git = "https://github.com/LunaStev/Wave", branch = "develop" }
+wavec = { git = "https://github.com/LunaStev/Wave", branch = "master" }
